# LightBulbFlow

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml
config/: logging.yaml
src/common/: logger_config.py
src/common/model/: ScrapedData.py
src/config/: loader.py  models.py
src/scrapers/: RedditScrapper.py  ScraperProtocol.py
